table and title

--- a/public/a02_精神與永續使命_m.html
+++ b/public/a02_精神與永續使命_m.html
@@ -279,6 +279,12 @@ caption {
 .title_h2{
     font-size: 23px;
 }
+
+.m_photo{
+  width: 100%;
+  overflow: auto;
+}
+
 </style>
 
 
@@ -294,14 +300,16 @@ caption {
 <p>隨著國際間對永續經營的重視提升，外部利害關係人更加關注企業在治理、社會及環境面向的作為，台灣高鐵於2016年10月27日掛牌上市，成為台灣首家鐵路運輸業股票上市的公司，特許期延長，在在都展現著此刻為台灣高鐵將永續思維納入核心的絕佳契機。台灣高鐵的營運策略以「4T」；運輸（Transportation）、科技（Technology）、在地（Taiwan）及關懷（Touch）作為永續經營的元素，以追求長期利益為重點，在企業文化、發展藍圖及策略上進行適當地調整。我們同時也積極連結聯合國永續發展指標以及核心本業的永續經營措施，讓台灣與國際同步接軌。
 </p>
 
-<h3>台灣高鐵響應聯合國永續發展目標之措施</h3>
 
+<div class="articleTitle">
+  <h2 class="articleTitleContent">台灣高鐵響應聯合國永續發展目標之措施</h2>
+</div>
 
 <div style="overflow: auto" class="table_m">  
-  <table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px; " width="500">
+    <table align="center" width="500">
     <tr >
-      <td bgcolor="#db5106" style="width:20%; color: #FFF">永續發展目標</th>
-      <td bgcolor="#db5106" style="width:80%; color: #FFF" >台灣高鐵措施</th>
+      <th bgcolor="#db5106" style="width:30%; color: #FFF">永續發展目標</th>
+      <th bgcolor="#db5106" style="width:70%; color: #FFF" >台灣高鐵措施</th>
     </tr>
     <tr >
       <td >確保有教無類、公平以及高品質的教育</td>
