--- a/public/d03_災害預防_m.html
+++ b/public/d03_災害預防_m.html
@@ -279,6 +279,12 @@ caption {
 .title_h2{
     font-size: 23px;
 }
+
+.m_photo{
+  width: 100%;
+  overflow: auto;
+}
+
 </style>
 
 
@@ -294,8 +300,10 @@ caption {
 
 	<img src="http://www.thsrc.com.tw/event/tmp/img/d08.jpg" style="width: 80%; display: block; margin: 0px auto">
 
-	<h3>安全訓練</h3>
-
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">安全訓練</h2>
+	</div>
+	
 	<p>為確保及提升營運安全，持續參考國內、外各種鐵道事件案例經驗，與行政院災防會核定之「台灣高速鐵路整體防救災應變計畫」，偕同各地外援單位規劃與推動各種災防訓練、救援演練，以熟悉聯合指揮應變作業機制與增進現場搶救能力，並進行防範之各種準備。</p>
 	<p>2015與2016年度於各車站、基地、路線等共分別辦理62與79項防救災演（訓）練，包含2016年3月份「南港隧道段列車救援聯合演練」、8月份「月台軌道區人員遭列車撞擊救援演練」等大型演練。另亦配合中央及地方政府完成「921國家防災日兵棋推演」、「北北基桃聯合防災演習」等。</p>
 
