--- a/public/e02_綠色採購_m.html
+++ b/public/e02_綠色採購_m.html
@@ -279,6 +279,12 @@ caption {
 .title_h2{
     font-size: 23px;
 }
+
+.m_photo{
+  width: 100%;
+  overflow: auto;
+}
+
 </style>
 
 
@@ -292,7 +298,10 @@ caption {
 	<p>台灣高鐵除響應政府對環保的要求外，也優先購買對環境衝擊較少的產品，落實綠色消費。於2010年起設定每年綠色採購金額至少達新臺幣800萬元的目標，2015年配合新增苗栗、彰化及雲林等3車站興建工程之綠色產品使用，採購金額高達3,814萬，2016年綠色採購金額雖減少，但仍達1,098萬元。歷年參加臺北市政府辦理「臺北市民間企業與團體綠色採購輔導」計畫並簽署「民間企業與團體綠色採購同意書」，皆榮獲綠色採購績優表揚，已連續八年獲頒推動綠色採購優良企業，更獲環保署頒獎。未來將持續配合政府辦理相關採購作業，引導廠商重視環境保護，我們要求廠商恪遵相關法律，不再另訂標準或管理稽查機制，若廠商發生違反相關法令，將會列為觀察名單，情節重大者則視狀況最重得終止合作。
 	</p>
 	
-	<h5>歷年綠色採購金額</h5>
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">歷年綠色採購金額</h2>
+	</div>
+
 	<div style="overflow: auto" class="table_m">  
 		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;" width="700">
 			<tr>
