--- a/public/f02_友善職場_m.html
+++ b/public/f02_友善職場_m.html
@@ -279,6 +279,12 @@ caption {
 .title_h2{
     font-size: 23px;
 }
+
+.m_photo{
+  width: 100%;
+  overflow: auto;
+}
+
 </style>
 
 
@@ -343,7 +349,10 @@ caption {
 	<p>我們的申訴管道透過員工提出之後，第一層由權責單位與受理單位處理，並交由員工關係部備查。若員工不滿意處理結果，可在向員工關係部申請第二層申訴，由人力資源處調查與申訴審議委員會審議，交由執行長確認後再回饋給員工，透過層層溝通與處理機制讓員工獲得滿意的答覆。</p>
 	<p>2015與2016年度台灣高鐵發生兩起重大勞資爭議事件，我們正面積極處理，並依據公正單位的決議進行後續處理事宜。</p>
 
-	<h5>2015與2016年重大勞資事件處理</h5>
+
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">2015與2016年重大勞資事件處理</h2>
+	</div>
 	
 	<div style="overflow: auto" class="table_m">  
 		<table align="center" width="700">
@@ -376,7 +385,10 @@ caption {
 
 	<br><br>
 
-	<h3>職業安全衛生</h3>
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">職業安全衛生</h2>
+	</div>
+
 	<p>台灣高鐵以安全為所有決策和行動的最高指導原則，並制定安全衛生政策作為確保旅客、工作者和其他公眾安全健康的政策承諾，並於2017年4月更新。</p>
 	
 	<div style="overflow: auto" class="table_m">  
@@ -408,7 +420,11 @@ caption {
 	</div>
 	<p>虛驚事件之報告及其後續改善作為，事實上即為事故之先期防範，我們推動虛驚事件通報獎勵方案，透過獎勵方式鼓勵員工主動通報作業環境中的虛驚事件，俾預先辨識鐵路營運環境中各種潛在危害，於事前加以控制或將其風險降低至可接受程度。2016 年透過虛驚通報電子信箱蒐集到293 次回饋，經審視後，其中31 件為虛驚事件，皆已改善完畢，其餘提報案件為危害、或非職業安全相關議題等，均通報相關單位另行處理。</p>
 	
-	<h5>安全衛生管理機制執行表</h5>
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">安全衛生管理機制執行表</h2>
+	</div>
+
+
 	<div style="overflow: auto" class="table_m">  
 		<table align="center" width="500">
 			<tr>
@@ -475,8 +491,9 @@ caption {
 	<p>台灣高鐵安衛管理目標以量化及可追蹤指標作為管理方式，如職災人數或失能傷害頻率（FR），及失能日數或失能傷害嚴重率（SR）。我們針對員工以及承攬供應商設置不同目標，並且採取積極量測與監督的定期或不定期的巡檢與稽核機制，以確實落實內部安衛管理機制。</p>
 
 
-
-	<h5>安衛管理目標</h5>
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">安衛管理目標</h2>
+	</div>
 
 	<div style="overflow: auto" class="table_m">  
 		<table align="center" width="600">
@@ -557,7 +574,9 @@ caption {
 	<p>健康管理以優於法令規定辦理健康檢查，每年並辦理健康促進活動（如減重班、健康講座）及醫護人員臨廠健康訪視。一般員工45歲以上每年檢查1次，45歲以下每二年檢查1次；行車人員每年檢查1次。在2015的健康檢查結果中，行車人員8位不合格，其中2位已離職，6位已調整勤務為非行車人員工作，其餘行車人員檢查結果均合格。</p>
 
 
-	<h5>健康檢查參與人數</h5>
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">健康檢查參與人數</h2>
+	</div>
 
 	<div style="overflow: auto" class="table_m">  
 		<table align="center" width="700">
@@ -599,7 +618,10 @@ caption {
 	<h3>員工關懷措施</h3>
 	<p>為顧客提供貼心服務的同時，台灣高鐵的員工更是我們全心照顧的對象，訂定福利辦法建置完整員工福利制度，並依法設立職工福利委員會，辦理各項福利措施及運作，且定期透過參與外部顧問公司提供之市場調查，確保福利計畫之市場競爭力。</p>
 
-	<h5>台灣高鐵員工福利項目</h5>
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">台灣高鐵員工福利項目</h2>
+	</div>
+
 	<div style="overflow: auto" class="table_m">  
 		<table align="center" width="600">
 			<tr>
