--- a/public/d03_災害預防.html
+++ b/public/d03_災害預防.html
@@ -1339,9 +1339,9 @@ a.Interval2:hover { background:#cc6600}
 	<h3>行車安全與災害預防及應變</h3>	
 	
 	<p>影響高鐵行車安全之危險因素大致可區分為三大類型，如自然環境因素（地震、颱風、豪雨、邊坡滑動、落石等）、人為因素（破壞設備、縱火、爆裂物、暴力攻擊、挾持等）、設備異常（號誌系統故障、道岔故障、列車轉向架故障、電力線垂落等），並依據三大類型內容規劃各項整體性之防範與應變措施，以旅客與人員安全為優先，在設備緊急搶修時，也以避免損害或列車延誤擴大為第一考量。為使各層級同仁熟悉各種緊急狀況之應變程序，每年擬定演訓練計畫，進行各類假定情境之定期與無預警演練，可參考公司所公告之高鐵地震防護與應變。</p>
-
-	<img src="http://www.thsrc.com.tw/event/tmp/img/d08.jpg" alt="">
-
+	<div class="m_photo">
+		<img src="http://www.thsrc.com.tw/event/tmp/img/d08.jpg" alt="" style=" display: block; margin: 20px auto">
+	</div>
 	<h3>安全訓練</h3>
 
 	<p>為確保及提升營運安全，持續參考國內、外各種鐵道事件案例經驗，與行政院災防會核定之「台灣高速鐵路整體防救災應變計畫」，偕同各地外援單位規劃與推動各種災防訓練、救援演練，以熟悉聯合指揮應變作業機制與增進現場搶救能力，並進行防範之各種準備。</p>
